fixing display page on mobile v3

--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -7,7 +7,11 @@
 
   @media only screen and (max-width: $bp-small) {
     flex-direction: column;
-    // height: 100%;
+
+    height: 100%;
+    height: -moz-available; /* WebKit-based browsers will ignore this. */
+    height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+    height: stretch;
   }
 }
 
